
Version 1.27  2010-04-10
 * storage.conf: add if_alias_prefix parameter to get the ip address of the 
   local host
 * storage http support domain name
 * php extension add some parameters in fastdfs_client.ini
 * make.sh compile use debug mode
 * type off_t change to int64_t
 * redirect stdout and stderr to log file

Version 1.26  2010-02-28
 * remove compile warning of logError
 * ini reader support section
 * bug fixed: tracker/tracker_mem.c sync storage server status
 * use storage server http server port anyway
 * bug fixed: ini reader can support relative config filename
 * function enhancement: tracker server can check storage HTTP server alive

Version 1.25  2010-02-04
 * storage_sync.c if source file not exist when sync a file, change from 
   logWarning to logDebug
 * filename buff size change from 64 to 128
 * bug fixed: c client and php client, log not inited cause core dump when 
   call log functions
 * can print stack trace when process core dumped in Linux server
 * bug fixed: tracker/tracker_mem.c load storage servers fail with many groups
   and storage servers
 * common/sockopt.c remove debug info
 * storage stat add fields: version
 * auto adjust when storage server ip address changed
 * bug fixed: when add a new storage server, other storage servers' status keep
   the same, not changed
 * add macros, compile passed in cygwin, thanks Seapeak
 * write to system data file using lock
 * common/ini_file_reader.c: use one context parameter, not two parameters
 * storage status sync modified (the code of tracker and storage both changed)
 * when recv kill signal, worker thread quit more quickly, daemon process 
   fdfs_trackerd and fdfs_storage quit very quickly when recv kill signal
 * remove compile warning info of logError
 * tracker server start more quickly with many groups and storage servers
 * bug fixed: correct off_t printf format

Version 1.24  2010-01-06
 * call php_fdfs_close with TSRMLS_CC as php_fdfs_close(i_obj TSRMLS_CC)