@@ -7,6 +7,7 @@ Version 1.27  2010-04-10
  * make.sh compile use debug mode
  * type off_t change to int64_t
  * redirect stdout and stderr to log file
+ * php extension list_groups add fields: version and http_domain
 
 Version 1.26  2010-02-28
  * remove compile warning of logError
